--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* Homepage  */
+
 .banner {
 	background-image: url("/assets/site_images/image5.png");
 	min-height: 700px;
@@ -73,6 +75,7 @@ body{
 
 .title{
   margin-top: 20px;
+  color: #284269; 
 }
 
 /* Sticky Footer rules (https://getbootstrap.com/examples/sticky-footer/) */
