--- a/css/style.css
+++ b/css/style.css
@@ -68,9 +68,16 @@ body{
   background: #e6b292;
   color: #284269;
   padding:20px;
-  padding-left: 60px;
+  padding-left: 10px;
+  padding-top: 0px;
   text-transform: uppercase;
   letter-spacing: 4px;
+}
+
+/* India Gate Caption */
+small {
+  text-align: right;
+	letter-spacing: 0px;
 }
 
 .title{
